<resources>
    <string name="app_name">NG콕</string>
    <string name="signin_google">Google으로 로그인</string>
    <string name="signin_facebook">Facebook으로 로그인</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signin_email">회원가입</string>
    <string name="login_email">로그인</string>

    <string name="home">home</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="account">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
